- executable .py scripts need "#!/usr/bin/env python", add this to demo.py,
  remove exec bits from website/wiki/wiki/data/plugin/theme/roundup.py
  (Thomas Arendsen Hein)
- issue2550822: Fix showing more than one additional property in class menu
  (James Mack)
- Fix String search with special SQL wildcard characters in LIKE/ILIKE
  clause and add testcase (Ralf Schlatterbeck)


2013-07-06: 1.5.0

Features:

- issue2550775 Added rel=nofollow to links in the journal linking to
  attachments to allow the admin to delete attachment spam and prevent
  search engines from increasing the rankings. (John Rouillard)
- issue2550808 Enhanced the boolean field template function. Now by
  default the labels generated can be clicked on and select the
  corresponding radio button. Also can create a trivalued radiobutton
  (yes/no/unknown) as well as customize the labels for the
  yes/no/unknown radio buttons.  (John Rouillard)
- issue2550807 enhance classhelp method with ability to set html
  properties on the generated link. (John Rouillard)
- Support for tx_Source property on database handle. Can be used by
  detectors to find out the source of a change in an auditor to block
  changes arriving by unauthenticated mechanisms (e.g. plain email
  where headers can be faked). The property db.tx_Source has the
  following values:
  * None - Default value set to None. May be valid if it's a script
    that is created by the user. Otherwise it's an error and indicates
    that some code path is not properly setting the tx_Source property.
  * "cli" - this string value is set when using roundup-admin and
    supplied scripts.
  * "web" - this string value is set when using any web based
    technique: html interface, xmlrpc ....
  * "email" - this string value is set when using an unauthenticated
    email based technique.
  * "email-sig-openpgp" - this string value is set when email with a
    valid pgp signature is used. (*NOTE* the testing for this mode